# AxAgent

./: .gitattributes  .gitignore  CLAUDE.md  README-AR.md  README-DE.md  README-EN.md  README-ES.md  README-FR.md  README-HI.md  README-JA.md  README-KO.md  README-RU.md  README-ZH-TW.md  README.md  cliff.toml  compare_i18n.cjs  compare_keys.ps1  dprint.json  index.html  package-lock.json  package.json  playwright.config.ts  skills-lock.json  translate.py  tsconfig.json  typedoc.json  vite.config.ts
src-tauri/: .clippy.toml  .rustfmt.toml  Cargo.toml  pricing.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/acp/: Cargo.toml
src-tauri/crates/acp/src/: client.rs  mod.rs  protocol.rs  server.rs  session.rs  types.rs
src-tauri/crates/agent/: Cargo.toml
src-tauri/crates/agent/src/: academic_search.rs  action_executor.rs  agent_adapter.rs  agent_config.rs  agent_runtime.rs  checkpoint.rs  citation_tracker.rs  content_synthesizer.rs  context_files.rs  coordinator.rs  credibility_evaluator.rs  deep_research.rs  error_classifier.rs  error_recovery_engine.rs  event_bus.rs  event_emitter.rs  fact_checker.rs  frontend_adapter.rs  graph_insights.rs  health_checker.rs  hierarchical_planner.rs  ingest_pipeline.rs  ingest_queue.rs  insight_generator.rs  interrupt.rs  lib.rs  lint_checker.rs  local_tool_registry.rs  loop_detector.rs  metrics.rs  outline_builder.rs  proactive_mode.rs  project_memory.rs  provider_adapter.rs  purpose_manager.rs  query_engine.rs  react_engine.rs  reasoning_state.rs  recovery_strategies.rs  reference_builder.rs  (+28 more)
src-tauri/crates/agent/tests/: coordinator_tests.rs  error_recovery_tests.rs  planner_tests.rs  react_engine_tests.rs  recovery_tests.rs
src-tauri/crates/code_engine/: Cargo.toml
src-tauri/crates/code_engine/src/: lib.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: ast_index.rs  browser_automation.rs  builtin_tools.rs  builtin_tools_registry.rs  cache.rs  cache_persister.rs  cache_snapshot.rs  command_validator.rs  computer_control.rs  crypto.rs  db.rs  disk_cache.rs  document_parser.rs  error.rs  file_authorizer.rs  file_index.rs  file_store.rs  git_tools.rs  hybrid_search.rs  incremental_indexer.rs  lib.rs  markdown_parser.rs  marketplace.rs  marketplace_service.rs  mcp_client.rs  operation_audit.rs  output_processor.rs  path_vars.rs  platform_config.rs  preset_templates.rs  prompt_template.rs  rag.rs  recall_pipeline.rs  repo.rs  reranker.rs  s3_backup.rs  sandbox_runner.rs  screen_capture.rs  screen_vision.rs  search.rs  (+16 more)
src-tauri/crates/core/tests/: builtin_tools_tests.rs  cache_integration.rs  cli_config_integration.rs  gateway_usage_integration.rs  repo_integration.rs  vector_store_integration.rs
src-tauri/crates/gateway/: Cargo.toml
src-tauri/crates/gateway/src/: auth.rs  handlers.rs  lib.rs  marketplace_handlers.rs  metrics.rs  middleware.rs  native.rs  realtime.rs  routes.rs  server.rs
src-tauri/crates/migration/: Cargo.toml
src-tauri/crates/migration/src/: lib.rs  m20240101_000001_init.rs  m20240101_000002_init_workflow.rs  m20240101_000003_init_gateway_tools.rs  m20240101_000004_init_knowledge.rs  m20240101_000005_init_trajectory.rs  m20240101_000006_init_prompt.rs  m20240101_000007_init_background_tasks.rs  m20240101_000008_init_rl.rs  m20240102_000001_add_token_fields.rs  m20240103_000001_add_mcp_timeout_headers.rs  m20240104_000001_add_mcp_icon.rs  m20250105_000001_context_compression.rs  m20250106_000001_add_message_status.rs  m20250107_000001_add_provider_custom_headers.rs  m20250108_000001_add_provider_icon.rs  m20250109_000001_add_conversation_categories.rs  m20250110_000001_add_memory_item_index_status.rs  m20250111_000001_add_memory_item_index_error.rs  m20250113_000001_add_memory_namespace_settings.rs  m20250114_000001_add_memory_namespace_icon_sort.rs  m20250115_000001_add_knowledge_base_icon_sort.rs  m20250116_000001_add_knowledge_base_retrieval_settings.rs  m20250117_000001_add_knowledge_base_chunking_config.rs  m20250118_000001_add_knowledge_document_type.rs  m20250119_000001_add_knowledge_document_index_error.rs  m20250120_000001_add_message_timing.rs  m20250121_000001_add_conversation_parent_id.rs  m20250122_000001_merge_thinking_to_content.rs  m20250123_000001_add_category_system_prompt.rs  m20250717_000001_add_agent_support.rs  m20250718_000001_add_sdk_context_backup.rs  m20250719_000001_add_skill_states.rs  m20250720_000001_add_provider_builtin_id.rs  m20250801_000001_add_performance_indexes.rs  m20260417_000001_add_category_default_templates.rs  m20260422_000001_add_gateway_links.rs  m20260423_000001_add_knowledge_graph_tables.rs  m20260424_000001_add_conversation_scenario_and_skill_filter.rs  m20260424_000002_add_scheduled_tasks.rs  (+21 more)
src-tauri/crates/plugins/: Cargo.toml
src-tauri/crates/plugins/src/: agent_provider.rs  hooks.rs  lib.rs
src-tauri/crates/providers/: Cargo.toml
src-tauri/crates/runtime/: Cargo.toml
src-tauri/crates/telemetry/: Cargo.toml
src-tauri/crates/tools/: Cargo.toml
src-tauri/crates/trajectory/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/scripts/: browser-automation.mjs
src-tauri/src/: app_state.rs  context_manager.rs  indexing.rs  lib.rs  main.rs  paths.rs  tray.rs  window_state.rs  windows_utils.rs
src-tauri/src/commands/: agency_expert.rs  agent.rs  agent_analytics.rs  agent_insight.rs  agent_nudge.rs  agent_profile.rs  agent_role.rs  app_config.rs  artifacts.rs  atomic_skills.rs  background_tasks.rs  backup.rs  branches.rs  browser.rs  chart_generator.rs  computer_control.rs  context_sources.rs  conversation_categories.rs  conversations.rs  conversations_search.rs  dashboard.rs  desktop.rs  dream.rs  evaluator.rs  file_cleanup.rs  files.rs  files_page.rs  fine_tune.rs  gateway.rs  gateway_link.rs  generated_tool.rs  image_gen.rs  image_gen_settings.rs  knowledge.rs  llm_wiki.rs  local_tool.rs  mcp.rs  memory.rs  messages.rs  mod.rs  (+32 more)
src-tauri/src/init/: database.rs  mod.rs  plugins.rs  services.rs  state.rs
src-tauri/src/semantic_cache/: mod.rs
src-tauri/src/smart_router/: mod.rs
(+1210 files in other folders)
