[package]
name = "axagent-acp"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/mod.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
axagent-runtime = { path = "../runtime" }
reqwest = { workspace = true }
