[package]
name = "axagent-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axagent-core = { path = "../core" }
axagent-providers = { path = "../providers" }
axagent-runtime = { path = "../runtime" }
axagent-trajectory = { path = "../trajectory" }
sea-orm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
tauri = "2"
futures = "0.3"
futures-util = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
