[package]
name = "axagent-agent"
version.workspace = true
edition.workspace = true

[dependencies]
axagent-core = { path = "../core" }
axagent-providers = { path = "../providers" }
axagent-runtime = { path = "../runtime" }
axagent-trajectory = { path = "../trajectory" }
sea-orm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
base64 = "0.22"
tauri = "2"
futures = "0.3"
futures-util = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
parking_lot = "0.12"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"
regex = "1"
fastrand = "2.0"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
url = "2.4"
pdf-extract = "0.8"
docx-rs = "0.4"
md5 = "0.7"
sha2 = "0.10"
