[package]
name = "axagent-code-engine"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
axagent-core = { path = "../core" }
axagent-trajectory = { path = "../trajectory" }
