[package]
name = "axagent-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
axagent-core = { path = "../core" }
axagent-providers = { path = "../providers" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
uuid = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
sea-orm = { workspace = true }
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
reqwest = { workspace = true, features = ["stream"] }
prometheus = "0.13"
