[package]
name = "axagent-runtime"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
sha2 = "0.10"
glob = "0.3"
axagent-plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
axagent-telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.6.1", features = ["v4"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
async-trait = "0.1"
futures = "0.3"
quick_cache = "0.4"

[lints]
# workspace = true
