[package]
name = "axagent-runtime"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
sha2 = "0.10"
glob = "0.3"
axagent-plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
axagent-telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.6.1", features = ["v4"] }
walkdir = "2"
reqwest = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
async-trait = "0.1"
thiserror = { workspace = true }
anyhow = "1"
futures = "0.3"
quick_cache = "0.4"
chrono = { workspace = true }
dirs = "6"
sea-orm = { workspace = true }
axagent-core = { path = "../core" }
axagent-trajectory = { path = "../trajectory" }
axagent-providers = { path = "../providers" }
sysinfo = "0.32"
itertools = "0.14"
portable-pty = "0.8"
base64 = "0.22"
axum = "0.8"
hex = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
roxmltree = "0.20"
sha1 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
# workspace = true
