[package]
name = "axagent-telemetry"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.4"
prometheus = "0.13"
tokio = { version = "1", features = ["sync"] }

[lints]
# workspace = true
