[package]
name = "axagent-tools"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
regex = "1"
glob = "0.3"
reqwest = { workspace = true, features = ["multipart"] }
scraper = "0.22"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
diff = "0.1"
base64 = "0.22"
walkdir = "2"
which = "7"
dirs = "6"
pdf-extract = "0.8"
parking_lot = "0.12"
sea-orm = { workspace = true }
image = { workspace = true }
sha2 = { workspace = true }
lazy_static = { workspace = true }
axagent-core = { path = "../core" }
axagent-runtime = { path = "../runtime" }
rusqlite = { version = "0.32", features = ["bundled"] }
docx-rs = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
xcap = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
# xcap 仅支持 Windows，非 Windows 使用命令行截图

[dev-dependencies]
tempfile = "3"

[lints]
