[package]
name = "axagent-trajectory"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sea-orm = { workspace = true }
sea-query = "0.32"
sha2 = "0.10"
tracing = "0.1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
dirs = "6"
rand = "0.8"
futures = "0.3"
itertools = "0.13"
reqwest = { workspace = true }
async-trait = "0.1"
axum = "0.8"
axagent-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"